# easy-pass-render

./: README.md  cmds.txt  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_alter_account_password.py
accounts/templates/: account.html  login.html  register.html
accounts/templates/password_reset_templates/: password_reset_email.html
pages/templates/: home.html  welcome_page.html
password_manager/: settings.py
templates/: base.html
templates/snippets/: footer.html  navbar.html
vault/: views.py
vault/migrations/: 0001_initial.py
